--- a/Nplus-shop/css/main.css
+++ b/Nplus-shop/css/main.css
@@ -1,11 +1,72 @@
-body {
-    background-color: #F7CC45;
-    height: 100%;
-}
-
 * {
     margin: 0 auto;
     padding: 0;
+}
+
+body {
+    font-family: "微软雅黑";
+    width: 6.4rem;
+    margin: 0 auto;
+    padding: 0;
+    font-size: .24rem;
+    color: #4f4f4f;
+    background: #f3f3f3;
+    word-break: break-all;
+    word-wrap: break-word;
+}
+
+ul, li {
+    list-style-type: none;
+}
+
+ul {
+    position: absolute;
+    bottom: 0;
+    list-style-type: none;
+    margin: 0 auto;
+    overflow: hidden;
+    width: 100%;
+}
+
+li {
+    float: left;
+    width: calc(25% - .02rem);
+    height: 98px;
+    background-color: #fff;
+    opacity: .9;
+}
+
+.line {
+    width: .02rem;
+    background-color: #000;
+    height: .23rem;
+    background-color: #CACACA;
+    margin: 0 auto;
+    border-top: .38rem;
+    border-bottom: .38px;
+    border-left: 0;
+    border-right: 0;
+    border-style: solid;
+    border-color: #fff;
+}
+
+a:link,
+a:visited {
+    display: block;
+    font-weight: bold;
+    color: #626262;
+    background-color: #fff;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: .3rem;
+    padding: .37rem;
+}
+
+a:hover,
+a:active {
+    background-color: #fff;
+    color: #000;
 }
 
 .body {
@@ -15,13 +76,9 @@ body {
     background-color: #F7CC45;
 }
 
-ul, li {
-    list-style-type: none;
-}
-
 .main {
     padding: 0;
-    width: 7.5rem;
+    width: 100%;
     background-color: #fff;
     overflow: auto;
     margin-bottom: .98rem;
@@ -29,6 +86,7 @@ ul, li {
 
 .footer {
     position: fixed;
+    position: absolute;
     margin-left: 0 auto;
     bottom: 0rem;
     width: 100%;
